feat(product-service): working on category and product endpoint